samples/_failures_safe/1761724394_db2873_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_167a115d.c: In function ‘main’:
./samples/SAFE/__tmp_167a115d.c:153:13: error: expected expression at end of input
  153 |             case
      |             ^~~~
./samples/SAFE/__tmp_167a115d.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_167a115d.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_167a115d.c:153:13: error: expected declaration or statement at end of input
